# ProyectoCompiII

generatedCodev01/: ArithOp.asm  For.asm  HelloWorld.asm  IfTest.asm  Input.asm  RelOp.asm  While.asm
lexer/: CMakeLists.txt  HelloWorld.py  main.cpp  notes.txt  sample1.l  test.txt  tokens.h
lexer_re2c/: CMakeLists.txt  anything.txt  expr.y  expr_ast.tc  garbage.txt  large_input.re  lexer.h  main.cpp
lexer_re2c/cmake/: FindTREECC.cmake
lexer_re2c/examples/: HelloWorld.py  IfTest.py  SelectionSort.py  input.py
lexer_re2c_ast/: Auxiliar.h  expr.y  expr_ast.tc  expr_gen.tc  expresions  large_input.re  lexer.h  main.cpp  mips_ast.tc
lexer_re2c_ast/test/: ArithOperations.py  ForTest.py  IfTest.py  RelOperators.py  SelectionSort.py  WhileTest.py  gcd.py  input.py
